# llm-plays-balatro

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.designs/llm-rl-environment/: design.md
.designs/tensorzero-integration/: design.md
config/: tensorzero.toml
config/evaluations/balatro_action_quality/evaluators/action_quality/variants/judge_v1/: system_instructions.txt
config/functions/balatro_next_command/: output_schema.json  turn_context_schema.json
config/functions/balatro_next_command/default/: turn_context.minijinja
config/functions/balatro_next_command/variants/strategy_v1/templates/: system.minijinja  turn_context.minijinja
meta_harness/: __init__.py  evaluate.py  orchestrate.py  parse_results.py  propose.py
src/balatro_rl/: __init__.py  balatrobot_openai.py  tui.py
src/balatro_rl/engine/: __init__.py  content.py  core.py  env.py  metrics.py  models.py  rewards.py  rng.py  rules.py  serialization.py
tests/: test_balatrobot_logging.py  test_balatrobot_openai.py  test_env.py  test_tui.py
